# kasparro-agentic-aneesh-narayan-bandaru

./: Dockerfile  README.md  debug.py  docker-compose.yml  final_check.py  main.py  pyproject.toml  requirements.txt  test_fix.py
.github/workflows/: ci.yml
config/: settings.yaml
data/: product_input.json  product_schema.json
docs/: projectdocumentation.md
outputs/: comparison.json  faq.json  product_page.json
scripts/: run_demo.py  run_pipeline.py  validate_outputs.py
src/agents/: __init__.py  base_agent.py  comparison_agent.py  faq_agent.py  parser_agent.py  product_page_agent.py  question_agent.py  simple_comparison_agent.py  simple_faq_agent.py  simple_parser_agent.py  simple_product_page_agent.py  simple_question_agent.py  validation_agent.py
src/core/: __init__.py  config.py  exceptions.py  models.py  orchestrator.py  simple_orchestrator.py
src/logic_blocks/: __init__.py  base_block.py  benefits_block.py  comparison_block.py  price_block.py  safety_block.py  seo_block.py  usage_block.py
src/templates/: __init__.py  base_template.py  comparison_template.py  faq_template.py  product_template.py
src/utils/: __init__.py  file_handler.py  logger.py  metrics.py  validator.py
tests/: test_agents.py  test_blocks.py  test_integration.py  test_simple.py
